# flyvr

./: .gitignore  CMakeLists.txt  README.md  README.txt  Tracker.sln  requirements.txt  setup.py  text
ArduinoOpto/arduino_opto/: arduino_opto.ino
ArduinoServo/: ArduinoServo.ino  open_close.py  servo_control.py
ArduinoTemp/: ArduinoTemp.ino
Tracker/: BaseApplication.cpp  BaseApplication.h  Camera.cpp  Camera.h  CylinderBars.cpp  CylinderBars.h  MinimalOgre.cpp  OgreApplication.cpp  OgreApplication.h  Source.cpp  StimManager.cpp  StimManager.h  Stimulus.h  Tracker.cpp  Tracker.h  Tracker.vcxproj  Tracker.vcxproj.filters  TutorialApplication.cpp  TutorialApplication.h  Utility.cpp  Utility.h  arduino.cpp  arduino.h  config.ini  main_loop_time.txt  mutex.h  serial_loop_time.txt  stimulus.cpp  stimulus.h  timer.cpp  timer.h
analysis/: analysis.py  main.ui  qtmain.py
calibration/: background_region.npy
conf/: camera.ini  tracker.ini
examples/: cnc_center.py  cnc_home.py  cnc_manual_control.py  main.py  tmp.txt
flyvr/: LineCam.ino  LineViewer.pde  camera.py  cnc.py  constant_display.py  dispenser.py  display.py  dummy_display.py  gate_control.py  mrstim.py  opto.py  opto2.py  service.py  servo.py  stim.py  temp.py  tracker.py  trial.py  util.py
include/: Arduino.h  Camera.h  CylinderBars.h  OgreApplication.h  Serial.h  SimpleSerial.h  StimManager.h  Stimulus.h  Tracker.h  Utility.h
leap/: labels_3nodes.json  leap.py  test.py  test_video.py
qt/: foraging.ui  gui.py  main.ui  main.ui.autosave  plotting.py  qtmain.py  rangeslider.py
random/: 20191204-113401.txt  20191204-113439.txt  20191204-113604.txt  record_temp_humd.py  temp.py  xorg.conf
src/: Arduino.cpp  Camera.cpp  CylinderBars.cpp  OgreApplication.cpp  Serial.cpp  SimpleSerial.cpp  StimManager.cpp  Tracker.cpp  Utility.cpp  cam_thread_test.py  camera.py  cnc.py  cnc_center.py  cnc_dynamics.py  cnc_home.py  cnc_manual_control.py  cnc_thread_test.py  cnc_tracker.py  main.py  service.py  tracker.py
src/ArduinoStepper/: ArduinoStepper.ino
src/sketch_jul13a/: sketch_jul13a.ino
tests/: cam_thread_test.py  cnc_thread_test.py  cnc_thread_test_bak.py  ellipse_vs_ecc.py  gltest.py  mrstim_test.py  opencv_play_video.py  opencv_play_video_raw.py  processing_time_test.py
x64/Release/: ogre.cfg  plugins.cfg
